@@ -11,7 +11,13 @@
   <tr>
     <td>
       <dl>
-  <dt>January 16, 2005</dt>
+  <dt>January 26, 2005</dt>
+  <dd>LilyPond 2.5.9 is out. This release fixes a couple of annoying
+bugs in the direct PS output for piano braces.  Download <a
+href="download/#2.5">here</a>!
+  </dd>
+
+    <dt>January 16, 2005</dt>
 
   <dd>LilyPond 2.5.8 is out.  This
     release has many internal code cleanups. In addition,
