@@ -1,3 +1,7 @@
+2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/news.ihtml: add LSR
+
 2005-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/check-translation.py (CVS_DIFF): Omit keyword expansion.
